[metadata]
name = panicar
version = 0.0.1
description = RGB from Gaia EDR3

[options]
packages =
    panicar
install_requires =
    numpy
    astropy
    matplotlib
    requests
    astroquery
    pyvo
setup_requires =
    setuptools_scm

[options.extras_require]
hypercube =
    pysynphot

[options.entry_points]
console_scripts =
    panicar-rgb-from-gaiaEDR3 = panicar.rgbgaia:main
