[metadata]
name = rgblues
version = 0.0.1
description = RGB from Gaia EDR3
url: https://github.com/guaix-ucm/rgblues
license = GPLv3
license_file = LICENSE
author = Nicolás Cardiel
author_email = cardiel@ucm.es
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Astronomy
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages =
    rgblues
    rgblues.core
install_requires =
    numpy
    astropy
    matplotlib
    requests
    astroquery
    pyvo
    pooch

[options.entry_points]
console_scripts =
    rgblues = rgblues.core.__main__:main

